Fix REST API
